# quantluna

./: .dockerignore  .env.example  .env.production.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  PRODUCTION.md  README.md  REDIS.md  ROADMAP.md  SECURITY.md  WORKFLOW.md  dashboard.py  docker-compose.prod.yml  docker-compose.yml  main.py  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.in  requirements.txt  start.sh  start_all.sh  state_bus.py  test_live_positions.py
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
api/: __init__.py  account.py  backtest.py  data.py  decision.py  diagnostics.py  health.py  live.py  live_ws.py  main.py  metrics.py  ml.py  notifications.py  optimize.py  optimizer.py  pairs.py  paper.py  pnl.py  portfolio.py  rebalancer.py  reports.py  risk.py  schemas.py  services.py  sizing.py  strategies.py  strategy.py  watchdog.py  ws_routes.py
backtest/: __init__.py  analytics.py  auto_reoptimizer.py  auto_selector_runner.py  engine.py  engine_adapter.py  monte_carlo.py  multi_strategy_backtester.py  param_grid_optimizer.py  walk_forward.py  walk_forward_optimizer.py
config/: __init__.py  cointegration_config.py  prod_guard.py  production.env.example  settings.py  strategy_config.py
core/: __init__.py  account_snapshot.py  bybit_traffic_controller.py  cointegration.py  config_validator.py  correlation_matrix.py  funding_rate.py  kalman_adapter.py  kalman_filter.py  live_data_bridge.py  metrics.py  monitoring_watchdog.py  multi_market_orchestrator.py  performance_analytics.py  position_store.py  regime_detector.py  singleton_lock.py  spread.py  spread_monitor.py  state_bus.py  store.py  trade_journal.py  vol_regime_adapter.py  volatility_regime.py  warmup_manager.py  workflow_orchestrator.py  ws_reconnect.py
dashboard/: .env.local.example  .gitignore  Dockerfile  README.md  compare.html  index.html  next.config.js  next.config.mjs  next.config.ts  package-lock.json  package.json  server.py  server_patch_compare_route.py  tailwind.config.ts  tsconfig.json  types.ts
data/: __init__.py  bybit_fetcher.py  cache_store.py  fetcher_factory.py  funding.py  historical_fetcher.py  loader.py  market_data_cache.py
deploy/: docker-compose.prod.yml  production-checklist.md  quantluna.service
docs/: ORPHAN_AUDIT.md  watchdog.md
execution/: __init__.py  action_executor.py  adoption_engine.py  backoff.py  binance_order_router.py  bybit_live_runner.py  bybit_order_router.py  bybit_private_ws.py  bybit_warmup_fetcher.py  bybit_ws_bars.py  bybit_ws_feed.py  capital_allocator.py  capital_manager.py  checkpoint.py  checkpoint_manager.py  circuit_breaker.py  daily_pnl_tracker.py  decision_engine.py  emergency_stop.py  exchange_factory.py  funding_gate.py  funding_monitor.py  health_check.py  instrument_info_cache.py  integration_loop.py  internal_transfer_manager.py  live_execution_bridge.py  live_trader.py  live_trader_sprint6_patch.py  margin_order_router.py  margin_risk_guard.py  market_trade_handler.py  multi_market_runner.py  multi_pair_manager.py  native_sl_tp.py  okx_order_router.py  order_manager.py  order_throttle.py  paper_account.py  paper_engine.py  (+21 more)
nginx/: nginx.conf
notifications/: __init__.py  alert_dispatcher.py  discord_notifier.py  email_notifier.py  event_types.py  notifier_bus.py  slack_notifier.py  telegram_notifier.py
reporting/: __init__.py  chart_builder.py  daily_report.py  equity_chart.py  report_builder.py
risk/: __init__.py  auto_rebalancer.py  kelly.py  (+13 more)
(+218 files in other folders)
