[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "quantluna"
version = "0.1.0"
description = "Adaptive Kalman Filter Pairs Trading Engine for Crypto Markets"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "George Pricop", email = "george@quantluna.dev"}]
requires-python = ">=3.10"
keywords = ["pairs-trading", "kalman-filter", "statistical-arbitrage", "crypto", "quant"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial :: Investment",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.scripts]
quantluna-backtest = "scripts.run_backtest:main"
quantluna-live     = "scripts.run_live:main"
quantluna-scan     = "scripts.scan_pairs:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py310"
